cabal-version:      3.0
name:               hbs2-share
version:            0.24.1.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Dmitry Zuikov
maintainer:         dzuikov@gmail.com
-- copyright:
category:           System
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -fno-warn-type-defaults
        -threaded
        -rtsopts
        -O2
        "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language: GHC2021

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


  build-depends:
        hbs2-core
      , hbs2-peer
      , hbs2-storage-simple
      , hbs2-keyman
      , db-pipe
      , suckless-conf

      , atomic-write
      , bytestring
      , containers
      , directory
      , filepath
      , filepattern
      , interpolatedstring-perl6
      , memory
      , microlens-platform
      , mtl
      , serialise
      , streaming
      , stm
      , text
      , time
      , timeit
      , transformers
      , typed-process
      , unordered-containers
      , unliftio
      , zlib


library
    import:           shared-properties
    exposed-modules:
      HBS2.Share.App
      HBS2.Share.App.Types
      HBS2.Share.Config
      HBS2.Share.State
      HBS2.Share.Files
      HBS2.Share.Keys
      HBS2.Share.LocalHash
      HBS2.Share.MetaData

    other-modules:

    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-peer
    hs-source-dirs:   src

executable hbs2-share
    import:           shared-properties
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base, hbs2-share, hbs2-peer
        , optparse-applicative

    hs-source-dirs:   app
    default-language: GHC2021

