cabal-version:      3.0
name:               hbs2-storage-simple
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Database
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-properties
  ghc-options:
        -Wall
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -- -threaded
        -- -rtsopts
        -- "-with-rtsopts=-N4 -A64m -AL256m -I0"

  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeOperators
                     , TypeFamilies


library
    import:           shared-properties
    exposed-modules:  HBS2.Storage.Simple
                    , HBS2.Storage.Simple.Extra
    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-core
                    , async
                    , atomic-write
                    , bytestring
                    , bytestring-mmap
                    , cache
                    , containers
                    , directory
                    , filepath
                    , microlens-platform
                    , mtl
                    , prettyprinter
                    , stm
                    , stm-chans
                    , streaming
                    , transformers
                    , uniplate
                    , unordered-containers
                    , temporary
                    , filepattern


    hs-source-dirs:   lib
    default-language: Haskell2010


test-suite test
    import:           shared-properties
    default-language: Haskell2010

    other-modules:
      TestSimpleStorage

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs

    build-depends:
          base, hbs2-storage-simple, hbs2-core
        , async
        , bytestring
        , cborg
        , containers
        , directory
        , filepath
        , hashable
        , microlens-platform
        , mtl
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , tasty
        , tasty-hunit
        , temporary
        , timeit
        , uniplate
        , vector


executable hbs2-storage-simple-benchmarks
    import:           shared-properties

    ghc-options:
          -Wall
          -- -fno-warn-unused-matches
          -- -fno-warn-unused-do-bind
          -- -Werror=missing-methods
          -- -Werror=incomplete-patterns
          -- -fno-warn-unused-binds
          -threaded
          -rtsopts
          "-with-rtsopts=-N4 -A64m -AL256m -I0"

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base, hbs2-core, hbs2-storage-simple
                    , db-pipe
                    , aeson
                    , async
                    , base58-bytestring
                    , binary
                    , bytestring
                    , cborg
                    , clock
                    , containers
                    , directory
                    , filepath
                    , hashable
                    , interpolatedstring-perl6
                    , memory
                    , microlens-platform
                    , mtl
                    , optparse-applicative
                    , prettyprinter
                    , random
                    , safe
                    , serialise
                    , streaming
                    , text
                    , temporary
                    , transformers
                    , uniplate
                    , timeit
                    , stm
                    , unliftio
                    , network-byte-order

    hs-source-dirs: benchmarks
    default-language: Haskell2010




