cabal-version:      3.0
name:               hbs2-tests
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           Network
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common common-deps
    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , bytestring
        , cache
        , containers
        , data-default
        , deepseq
        , directory
        , filepath
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , prettyprinter
        , QuickCheck
        , random
        , random-shuffle
        , safe
        , serialise
        , split
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , temporary
        , timeit
        , transformers
        , uniplate
        , unordered-containers
        , vector

common shared-properties
  ghc-options:
        -Wall
        -O2
        -fno-warn-type-defaults
        -- -fno-warn-unused-matches
        -- -fno-warn-unused-do-bind
        -- -Werror=missing-methods
        -- -Werror=incomplete-patterns
        -- -fno-warn-unused-binds
        -threaded
        -rtsopts
        "-with-rtsopts=-N4 -A256m -AL256m -I0"


  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , DerivingStrategies
                     , DerivingVia
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , LambdaCase
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies


test-suite test-skey
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    other-modules:

    -- other-extensions:

    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestSKey.hs



executable test-udp
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestUDP.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector



executable test-logger
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestLogger.hs

    build-depends:
          base, hbs2-core, hbs2-storage-simple
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , QuickCheck
        , random
        , safe
        , serialise
        , stm
        , streaming
        , tasty
        , tasty-hunit
        , text
        , transformers
        , uniplate
        , vector
        , fast-logger


executable test-saltine
    import:           shared-properties
    import:           common-deps
    default-language: Haskell2010

    ghc-options:
      -- -prof
      -- -fprof-auto

    other-modules:

    -- other-extensions:

    -- type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestSaltine.hs

    build-depends:
          base, hbs2-core
        , async
        , attoparsec
        , bytestring
        , cache
        , clock
        , containers
        , data-default
        , data-textual
        , directory
        , hashable
        , microlens-platform
        , mtl
        , mwc-random
        , network
        , network-ip
        , prettyprinter
        , random
        , safe
        , serialise
        , stm
        , streaming
        , saltine
        , text
        , transformers
        , uniplate
        , vector
        , fast-logger

